2003-07-10  John Paul Wallington  <jpw@gnu.org>

	* progmodes/etags.el (visit-tags-table-buffer): Add autoload cookie;
	this function can be called from `add-completions-from-tags-table'.

2003-07-10  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* calendar/timeclock.el (timeclock-use-display-time)
	(timeclock-day-over-hook, timeclock-workday-remaining)
	(timeclock-status-string, timeclock-when-to-leave)
	(timeclock-when-to-leave-string, timeclock-log-data)
	(timeclock-find-discrep, timeclock-day-base) 
	(timeclock-generate-report, timeclock-visit-timelog): Doc fix.
	(timeclock-modeline-display): Set the variable
	`timeclock-modeline-display'.
	(timeclock-update-modeline): Doc fix.  Respect value of
	`timeclock-relative'.

2003-07-09  Richard M. Stallman  <rms@gnu.org>

	* textmodes/reftex-parse.el (reftex-all-document-files):
	Add autoload cookie.

	* textmodes/reftex.el (reftex-all-document-files): Delete autoload.
	(reftex-scanning-info-available-p): Add autoload cookie.

	* international/mule-cmds.el (set-display-table-and-terminal-coding-system):
	Delete duplicate aset on standard-display-table.

	* view.el (view-file): If existing buffer's major mode is special,
	don't go into view mode.

	* dired.el (dired-move-to-filename-regexp): Allow quote in months.

2003-07-08  Martin Stjernholm  <bug-cc-mode@gnu.org>

	* progmodes/cc-engine.el (c-guess-basic-syntax): Do not do hidden
	buffer changes; there's third party code that calls this function
	directly.

2003-07-08  Martin Stjernholm  <bug-cc-mode@gnu.org>

	* progmodes/cc-fonts.el (javadoc-font-lock-keywords,
	autodoc-font-lock-keywords): Don't byte compile on font lock
	initialization when running from byte compiled files.

2003-07-08  Alan Mackenzie  <bug-cc-mode@gnu.org>

	* progmodes/cc-engine.el: Fix AWK mode indentation when previous
	statement ends with auto-increment "++".

2003-07-08  Martin Stjernholm  <bug-cc-mode@gnu.org>

	* progmodes/cc-langs.el, progmodes/cc-styles.el (c-style-alist,